# corte

./: Cargo.toml  README.md  justfile
resources/: corte.conf  corte.service
src/: main.rs
src/battery/: battery.rs  mod.rs  mode.rs
src/cli/: cli.rs
src/client/: client.rs
src/config/: config.rs
src/daemon/: daemon.rs  mod.rs
src/daemon/batteries/: batteries.rs
src/gui/: gui.rs
src/menu/: menu.rs
src/tui/: menu.rs
