[package]
name = "corte"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["cargo"] }
menu_rs = "0.3.1"
tokio = { version = "1.35.1", features = ["full"] }
zbus = { version = "3.14.1", default-features = false, features = ["tokio"] }
config-better = "1.2.0"
serde = "1.0.193"
toml = "0.8.8"
serde_derive = "1.0.193"
log = "0.4.20"
env_logger = "0.10.1"
battery = "0.7.8"
